infra/k8s/pdf-converter-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-converter-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdf-converter
  template:
    metadata:
      labels:
        app: pdf-converter
    spec:
      containers:
        - name: pdf-converter
          image: flaviumarasescu/as-pdf-converter-service
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-converter-service
spec:
  selector:
    app: pdf-converter
  ports:
    - name: pdf-converter
      protocol: TCP
      port: 5003
      targetPort: 5003
